# cmptree

./: .buildinfo  .gitignore  README.md  basecomponents.py  circuit.py  components.py  genindex.html  helper.py  index.html  main.py  node.py  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yaml
_sources/code/: part.rst.txt
cmptree/: __init__.py  part.py
cmptree/characteristic/: __init__.py  base.py  dimension.py  mechanic.py  thermal.py
cmptree/characteristic/electric/: __init__.py  base.py  convert.py  distribute.py  electric.py  supply.py
cmptree/utils/: __init__.py  plotly.py
cmptree/utils/circuit/: circuit.py
code/: part.html
docs/source/: conf.py  index.rst
example/: components.py
tests/: test_part.py  test_recursion.py  test_utils_plotly.py
